--- a/app_tareas/templates/app_tareas/usuarios/form_avatar.html
+++ b/app_tareas/templates/app_tareas/usuarios/form_avatar.html
@@ -15,6 +15,7 @@
         <br>
         <button type="submit" , id="btnEnviar", class="btn btn-primary btn-sm">Aceptar Cambios</button>
         <a href="{% url 'home' %}" class="btn btn-primary btn-sm">Volver</a>           
+        <a href="{% url 'eliminar_avatar' user.id %}" class="btn btn-primary btn-sm">Eliminar archivo</a>
     </form>
 
 </div>
