colores de home

--- a/app_tareas/templates/app_tareas/home.html
+++ b/app_tareas/templates/app_tareas/home.html
@@ -20,7 +20,7 @@
               </p> 
                 
                   {% load static %}
-                  <center><img  src="{% static 'app_tareas\assets\img\Ronda.jpg' %}" ></center>
+                  <center><img  src="{% static 'app_tareas\assets\img\Ronda.jpg' %}" alt="Creando Sinergias"></center>
                    <p style="vertical-align:bottom ; text-align: right;"><i>creando sinergias</i></p>
          
     </body>
