--- a/app_tareas/templates/app_tareas/plantilla_base.html
+++ b/app_tareas/templates/app_tareas/plantilla_base.html
@@ -29,21 +29,26 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'categorias' %}">CATEGORIAS</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'tareas' %}">TAREAS</a></li>
                         {% if user.is_authenticated %}
-                            {% if user.avatar%}
-                        <img src="{{ user.avatar.imagen.url }}" style="width: 30px; height; 30px; border-radius: 100%;" />
-                            {% endif %}
+
                             <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                {{ user.username }}
+                                {% if user.avatar%}
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"> <img src="{{ user.avatar.imagen.url }}" style="width: 40px; height; 40px; border-radius: 100%;" /> {{ user.username }}
                                 </button>
+                                {%else%}
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"> {{ user.username }}
+                                </button>                                
+                                {% endif %}
+
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="{% url 'editar_usuario' user.id  %}"><strong>Editar Usuario</strong></a></li>                                    
-                                    <li><a class="dropdown-item" href="{% url 'logout' %}"><strong>Cerrar Sesión</strong></a></li>
+                                    <li><a class="dropdown-item" href="{% url 'editar_usuario' user.id  %}">Editar Usuario</a></li>                                    
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a></li>
                                 </ul>
                             </div>
+
                         {% else %}
-                        <li class="nav-item"><a class="btn btn-success btn-sm" style="margin: 5px;" href="{% url 'login' %}">INICIAR SESION</a></li>                        
-                        <li class="nav-item"><a class="btn btn-primary btn-sm"  style="margin: 5px;" href="{% url 'registro' %}">REGISTRARSE</a></li>
+                            <li class="nav-item"><a class="btn btn-success btn-sm" style="margin: 5px;" href="{% url 'login' %}">INICIAR SESION</a></li>                        
+                            <li class="nav-item"><a class="btn btn-primary btn-sm"  style="margin: 5px;" href="{% url 'registro' %}">REGISTRARSE</a></li>
+
                         {% endif %}                       
                     </ul>
                 </div>
