modificque la descripcion de la pagina en la solapa de about

--- a/app_tareas/templates/app_tareas/about/about.html
+++ b/app_tareas/templates/app_tareas/about/about.html
@@ -36,10 +36,10 @@
 <h1>Acerca de este Proyecto</h1>
 &nbsp;&nbsp;&nbsp;&nbsp;
 <body>
-    <p>Esta página está diseñada para coordinar un equipo de trabajo, donde cada operador tiene asignadas distintas tareas. Cada operador puede acceder al listado de tareas pendientes y marcarlas como realizadas. 
-    <p>El usuario administrador es quien tiene los permisos para editar y borrar.
-    <p>Podemos visualizar y filtrar el listado de Operadores, Categorías y Tareas en cada solapa correspondiente.
-    La web es muy fácil de navegar, ademas de intuitiva y práctica. Los invito a comprobarlo ustedes mismos!!    
+    <p>Esta página está diseñada para coordinar un equipo de trabajo, donde cada operador tiene asignadas distintas tareas. Cada usuario puede acceder al listado de tareas pendientes y marcarlas como realizadas. 
+    <p>Los usuarios tienen los permisos para editar su perfil y agregar un avatar. 
+    También, pueden filtrar, visualizar, editar y eliminar Tareas o Categorías en las solapas correspondientes.
+    <p>La web es muy fácil de navegar, además de intuitiva y práctica. Los invito a comprobarlo ustedes mismos!!    
     </p>
 </body>
 
