--- a/app_tareas/templates/app_tareas/plantilla_base.html
+++ b/app_tareas/templates/app_tareas/plantilla_base.html
@@ -72,8 +72,8 @@
 
 
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container px-4"><p class="m-0 text-center text-white">Software de Tareas</p></div>
+        <footer class="py-5 bg-light">
+            <div class="container px-4"><p class="m-0 text-center text-black">Software de Tareas</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
